# PolyVis

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  SPRINT_AUGUST_2022.md  build-local.sh
source/: CMakeLists.txt  edgevis.cpp  edgevis_arbitrary_edge.cpp  main.cpp  trivis_debug.cc  trivis_examples.cc
source/data/maps/: AR0018SR.txt  AR0205SR.txt  T.txt  antena1.txt  antena2.txt  antena3.txt  antena4.txt  circles4.txt  complex2-big.txt  complex2.txt  complex3-big.txt  empty.txt  gaps.txt  geometry-reduced.txt  jari-huge-small.txt  jari-huge.txt  jf-h2.txt  jf-jh.txt  jf-jh2.txt  jf-pb.txt  jf-pb2.txt  jf-potholes.txt  jf-ta.txt  jf-ta2.txt  jf-warehouse.txt  simple.txt  special.txt  special2.txt  special3.txt  square.txt  testgaps.txt  testgaps2.txt  unsolvable.txt  var_density2.txt  warehouse.txt  warehouse2.txt
source/draw_lib/: CMakeLists.txt  example.cc
source/draw_lib/cairo_geom_drawer/: cairo_geom_drawer.h
source/draw_lib/data/CETSP_disjoint/: jari-huge100.cetsp  jari-huge100rdmRad.cetsp  jari-huge400rdmRad.cetsp  jari-huge50rdmRad.cetsp  large100.cetsp  large100rdmRad.cetsp  large200.cetsp  large200rdmRad.cetsp  large400.cetsp  potholes100rdmRad.cetsp  potholes400.cetsp  potholes50.cetsp  potholes50rdmRad.cetsp  warehouse400.cetsp  warehouse400rdmRad.cetsp  warehouse50.cetsp
source/draw_lib/data/CETSP_intersect/CETSP_overleap_ratios/: d493v1.cetsp  d493v2.cetsp  d493v3.cetsp  dsj1000v1.cetsp  dsj1000v2.cetsp  dsj1000v3.cetsp  kroD100v1.cetsp  kroD100v2.cetsp  kroD100v3.cetsp  lin318v1.cetsp  lin318v2.cetsp  lin318v3.cetsp  pcb442v1.cetsp  pcb442v2.cetsp  pcb442v3.cetsp  rat195v1.cetsp  rat195v2.cetsp  rat195v3.cetsp  rd400v1.cetsp  rd400v2.cetsp  rd400v3.cetsp
source/draw_lib/data/CETSP_intersect/CETSP_rdm_rad/: bonus1000rdmRad.cetsp  d493rdmRad.cetsp  dsj1000rdmRad.cetsp  kroD100rdmRad.cetsp  lin318rdmRad.cetsp  pcb442rdmRad.cetsp  rat195rdmRad.cetsp  rd400rdmRad.cetsp  team1_100rdmRad.cetsp  team2_200rdmRad.cetsp  team3_300rdmRad.cetsp  team4_400rdmRad.cetsp  team5_499rdmRad.cetsp  team6_500rdmRad.cetsp
source/draw_lib/data/CETSP_intersect/CETSP_same_rad/: bonus1000.cetsp  bubbles1.cetsp  bubbles2.cetsp  bubbles3.cetsp  bubbles4.cetsp  bubbles5.cetsp  bubbles6.cetsp  bubbles7.cetsp  bubbles8.cetsp  bubbles9.cetsp  chaoSingleDep.cetsp  concentricCircles1.cetsp  concentricCircles2.cetsp  concentricCircles3.cetsp  concentricCircles4.cetsp  concentricCircles5.cetsp  rotatingDiamonds1.cetsp  rotatingDiamonds2.cetsp  rotatingDiamonds3.cetsp  rotatingDiamonds4.cetsp  rotatingDiamonds5.cetsp  team1_100.cetsp  team2_200.cetsp  team3_300.cetsp  team4_400.cetsp  team5_499.cetsp  team6_500.cetsp
source/draw_lib/data/CETSP_obstacles/jari-huge/: disjoint_200.cetsp  disjoint_200_random.cetsp  disjoint_400.cetsp  disjoint_50.cetsp  intersect_100.cetsp  intersect_100_random.cetsp  intersect_200.cetsp  intersect_200_random.cetsp  intersect_400.cetsp  intersect_400_random.cetsp  intersect_50.cetsp  intersect_50_random.cetsp
source/draw_lib/data/CETSP_obstacles/large/: disjoint_400_random.cetsp  disjoint_50.cetsp  disjoint_50_random.cetsp  intersect_100.cetsp  intersect_100_random.cetsp  intersect_200.cetsp  intersect_200_random.cetsp  intersect_400.cetsp  intersect_400_random.cetsp  intersect_50.cetsp  intersect_50_random.cetsp
source/draw_lib/data/CETSP_obstacles/potholes/: disjoint_10.cetsp  disjoint_100.cetsp  disjoint_10_random.cetsp  disjoint_200.cetsp  disjoint_200_random.cetsp  disjoint_400_random.cetsp  intersect_10.cetsp  intersect_100.cetsp  intersect_100_random.cetsp  intersect_10_random.cetsp  intersect_200.cetsp  intersect_200_random.cetsp  intersect_400.cetsp  intersect_400_random.cetsp  intersect_50.cetsp  intersect_50_random.cetsp
source/draw_lib/data/CETSP_obstacles/warehouse/: disjoint_100.cetsp  disjoint_100_random.cetsp  disjoint_200.cetsp  disjoint_200_random.cetsp  disjoint_50_random.cetsp  intersect_100.cetsp  intersect_100_random.cetsp  intersect_200.cetsp  intersect_200_random.cetsp  intersect_400.cetsp  intersect_400_random.cetsp  intersect_50.cetsp  intersect_50_random.cetsp
source/draw_lib/data/maps/warehouse/: warehouse.txt
source/draw_lib/geom/: geom.h  utils.h
source/draw_lib/intersections/: simple_intersection.h
source/draw_lib/polygon_clipping/: CMakeLists.txt  polygon_clipping.cc  polygon_clipping.h
source/draw_lib/polygonal_map/: CMakeLists.txt  polygonal_map.cc  polygonal_map.h
source/draw_lib/polygonal_map/draw/: map_drawer.h
source/include/: polyviz.h  visualization.h
source/include/data_loading/: load_map.h
source/include/drawing/: cairo_geom_drawer.h  colors.h  drawing.h  random_colors.h
source/include/logging/: logging.h
source/libs/: CMakeLists.txt
source/libs/edgevis/: CMakeLists.txt
source/libs/edgevis/src/: CMakeLists.txt
source/libs/haraborBased/: CMakeLists.txt
source/libs/haraborBased/edgevis/: CMakeLists.txt
source/libs/haraborBased/geomMesh/: CMakeLists.txt
source/libs/polyanya/: CMakeLists.txt
source/libs/trivis/: CMakeLists.txt
source/libs/trivis/src/: CMakeLists.txt
source/maps/large/: large.txt
source/maps/potholes/: potholes.txt
source/polyanya/: CMakeLists.txt
source/polyanya/helpers/: geometry.cpp  geometry.h  scenario.cpp  scenario.h
source/polyanya/parsers/: CMakeLists.txt  parser.cpp
source/polyanya/parsers/libs/: CMakeLists.txt  map_parser.cpp  map_parser.h  utils.cpp
source/polyanya/search/: expansion.cpp  expansion.h  searchinstance.cpp  searchinstance.h
source/polyanya/structs/: mesh.cpp  mesh.h
source/polyanya/utils/: CMakeLists.txt
source/polyanya/utils/fadeutils/: polymap.cpp
source/src/: polyviz.cpp  visualization.cpp
source/src/data_loading/: load_map.cc
source/src/drawing/: drawing.cc  random_colors.cc
source/src/logging/: logging.cc
src/libs/: CMakeLists.txt  README.md
src/libs/OG_poly/: CMakeLists.txt
src/libs/OG_poly/src/: CMakeLists.txt
src/libs/geomMesh/src/: CMakeLists.txt
src/libs/include/draw/: cairo_geom_drawer.h  colors.h
src/libs/include/utils/: simple_clock.h
src/libs/polyanya/: CMakeLists.txt
(+343 files in other folders)
